--- a/ExcelUpload/ExcelUpload/ExcelUpload.csproj
+++ b/ExcelUpload/ExcelUpload/ExcelUpload.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="8.0.3" />
+    <PackageReference Include="EPPlus.Core.Extensions" Version="2.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.15">
       <PrivateAssets>all</PrivateAssets>
